--- a/public/index.html
+++ b/public/index.html
@@ -53,8 +53,9 @@
       gtag('config', 'UA-135618960-2');
     </script>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.15.4/css/all.min.css">
-
+    <!-- Upgrade to Font Awesome v7 using Kit -->
+    <!-- link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.15.4/css/all.min.css" -->
+    <script src="https://kit.fontawesome.com/476781fe45.js" crossorigin="anonymous"></script>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
