Update index.html: professional logo font selection

--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,9 @@
     <!-- link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.15.4/css/all.min.css" -->
     <script src="https://kit.fontawesome.com/476781fe45.js" crossorigin="anonymous"></script>
 
+	<!-- For professional font selection -->
+	<link href="https://fonts.googleapis.com/css2?family=Agustina&family=Montserrat:wght@600&family=Poppins:wght@600&display=swap" rel="stylesheet" />
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
