--- a/public/index.html
+++ b/public/index.html
@@ -44,13 +44,13 @@
     <link rel=preload href="/static/media/Agustina.21f233e1.woff" as="font" type="font/woff" crossorigin>
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0VWRMRQH6F"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5ZJPJ04944"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
 	  gtag('js', new Date());
 	
-	  gtag('config', 'G-0VWRMRQH6F');
+	  gtag('config', 'G-5ZJPJ04944');
 	</script>
 
     <!-- Upgrade to Font Awesome v7 using Kit -->
